# synthetictext

./: .gitignore  CHANGELOG.md  FUTURE.md  LICENSE  README.md  pyproject.toml
examples/: polarization_detection.py  toxicity_detection.py
synthetictext/: __init__.py  cli.py  pipeline.py  qa.py  task.py  templated.py  utils.py
synthetictext/filters/: __init__.py  base.py  basic.py  deduplication.py  leakage.py  llm_judge.py  markers.py  pipeline.py  translation.py
synthetictext/generators/: __init__.py  backtranslation.py  base.py  contrastive.py  direct.py  paraphrase.py  pivot.py
synthetictext/prompts/: __init__.py  defaults.py  templates.py
synthetictext/providers/: __init__.py  base.py  google_translate.py  openai_provider.py
tests/: conftest.py  test_cli.py  test_filters.py  test_generators.py  test_openai_provider.py  test_pipeline.py  test_prompts.py  test_qa.py  test_task.py  test_templated.py  test_utils.py
tutorials/: 01_quickstart.ipynb  02_quality_filtering.ipynb  03_multilingual_generation.ipynb  04_rag_qa_generation.ipynb  05_templated_generation.ipynb
